--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "scripts": {
     "build": "gulp",
     "watch": "gulp watch",
+    "sls:start": "npm run build && sls offline start",
+    "sls:watch": "gulp slsWatch",
+    "sls:deploy": "npm run build && sls deploy --verbose",
+    "sls:online:migrate": "sls invoke --function migrate",
     "clean": "gulp clean",
     "seed": "gulp seed",
     "cleanSeed": "gulp cleanSeed",
@@ -56,6 +60,9 @@
     "gulp-ts-alias": "1.1.0",
     "gulp-typescript": "4.0.2",
     "mocha": "7.1.1",
+    "serverless": "^2.6.0",
+    "serverless-apigw-binary": "^0.4.4",
+    "serverless-offline": "^6.8.0",
     "typescript": "4.0.3"
   },
   "dependencies": {
@@ -87,6 +94,7 @@
     "sequelize": "5.21.3",
     "sequelize-typescript": "1.1.0",
     "serve-favicon": "2.5.0",
+    "serverless-http": "^2.6.0",
     "socket.io": "2.1.1",
     "source-map-support": "0.5.6",
     "umzug": "^2.3.0",
