--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "node --require source-map-support/register dist/main.js",
     "test": "gulp && mocha dist/test --recursive",
     "lint": "tsc --noEmit && eslint \"app/**/*.{js,ts}\" --fix",
-    "format": "prettier --write \"app/**/*.{js,ts}\""
+    "format": "prettier --write \"app/**/*.{js,ts}\"",
+    "postinstall": "cd cloudformation && npm install"
   },
   "author": "Rodrigo Mendez Gamboa <rodrigo.mendez@theksquaregroup.com>",
   "license": "UNLICENSED",
